--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-imagemin": "^3.0.1",
     "gulp-sass": "^2.3.2",
-    "imagemin-pngquant": "^5.0.0"
+    "imagemin-pngquant": "^5.0.0",
+    "pack": "^0.2.8"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
